@@ -98,4 +98,5 @@ extern int sts_always_red;// status numbers do not change colors
 extern int sts_pct_always_gray;// status percents do not change colors
 extern int sts_traditional_keys;  // display keys the traditional way
 
+extern int st_palette;    // cph 2006/04/06 - make palette visible
 #endif
